fix: align the scroll mermaid to the left

--- a/SCSS/_blocks/_codeblocks/_mermaid.scss
+++ b/SCSS/_blocks/_codeblocks/_mermaid.scss
@@ -6,4 +6,5 @@
 .mermaid-scroll .mermaid {
   overflow: auto;
   min-width: 750px;
+  align-self: flex-start;
 }
